Added UserStock association and views: listing and deleting

--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -17,6 +17,10 @@
 <% end %>
 </div>
 
-<div id="results"></div>
+<div id="results">
   <%= render 'users/result' %>
+</div>
+
+<div id="user-stocklist">
+  <%= render 'stocks/list' %>
 </div>
