Added friends search functionality and js partials

--- a/app/views/friends/_lookup.html.erb
+++ b/app/views/friends/_lookup.html.erb
@@ -4,7 +4,8 @@
 <%= form_tag search_friends_path, remote:true, method: :get, id: "friend-lookup-form" do %>
   <div class="form-group row no-padding col-md-12">
     <div class = "col-md-10">
-      <%= text_field_tag :search_param, params[:search_param], placeholder: "Enter name or email", autofocus: true, class: "form-control search-box, input-lg" %>
+      <%= text_field_tag :search_param, params[:search_param], placeholder: "Enter name or email", 
+      autofocus: true, class: "form-control search-box, input-lg" %>
     </div>
     <div class="col-md-2">
       <%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
@@ -13,4 +14,9 @@
     </div>
   </div>
 <% end %>
+</div>
+
+
+<div id="results">
+  <%= render 'friends/result' %> 
 </div>
