--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -4,7 +4,7 @@
 </div>
 <% end %>
 
-<% if @users %>
+<% if @users && @users.size >0%>
 <div id="friends-lookup-results", class="well col-md-10">
   <table class="col-md-12">
     <tbody>
